--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@ body {
 }
 
 .container {
-    width: 90%;
-    padding: 0 20px;
+    width: 95%;
+    padding: 0 10px;
 }
 
 a {
@@ -175,20 +175,113 @@ ul {
 }
 
 .main__span {
-    color: var(--text-color);
-    font-size: 28px;
+    color: var(--primary-color);
+    font-size: 30px;
     font-weight: 500;
-    margin-bottom: 16px;
+    margin-bottom: 10px;
     display: inline-block;
 }
 
+
 .main__title {
-    color: var(--text-color);
-    line-height: 1.3;
-    font-weight: 600;
-    font-size: 4rem;
+    color: #fff;
+    font-family: 'Poppins', sans-serif;
+    font-size: 3rem;
+    font-weight: 100;
+    line-height: 1.5;
+    white-space: nowrap;
+    overflow: hidden;
+    position: relative;
+    width: 550px;
     margin-bottom: 16px;
-}
+  }
+  
+  .ttl__span {
+    font-size: 40px;
+    margin-left: 90px;
+  }
+  
+  .message {
+    background-color: transparent;
+    color: #fcf6f6;
+    display: block;
+    font-weight: 600;
+    overflow: hidden;
+    position: absolute;
+    padding-left: 0.5rem;
+    top: 0.2rem;
+    left: 240px;
+    animation: openclose 5s ease-in-out infinite;
+  }
+  
+  .word1, .word2, .word3 {
+    font-family: 'Poppins', sans-serif;
+  }
+  
+  @keyframes openclose {
+    0% {
+      top: 0.2rem;
+      width: 0;
+    }
+    5% {
+      width: 0;
+    }
+    15% {
+      width: 300px;
+    }
+    30% {
+      top: 0.2rem;
+      width: 300px;
+    }
+    33% {
+      top: 0.2rem;
+      width: 0;
+    }
+    35% {
+      top: 0.2rem;
+      width: 0;
+    }
+    38% {
+      top: -4.5rem;
+      
+    }
+    48% {
+      top: -4.5rem;
+      width: 320px;
+    }
+    62% {
+      top: -4.5rem;
+      width: 320px;
+    }
+    66% {
+      top: -4.5rem;
+      width: 0;
+      text-indent: 0;
+    }
+    71% {
+      top: -9rem;
+      width: 0;
+      text-indent: 5px;
+    }
+    86% {
+      top: -9rem;
+      width: 285px;
+    }
+    95% {
+      top: -9rem;
+      width: 285px;
+    }
+    98% {
+      top: -9rem;
+      width: 0;
+      text-indent: 5px;
+    }
+    100% {
+      top: 0;
+      width: 0;
+      text-indent: 0;
+    }
+  }
 
 .main__text {
     color: #dee3e4;
@@ -217,10 +310,10 @@ ul {
 /* welcome animatsiya */
 
 #box {
-    color: var(--primary-color);
-    font-size:50px;
-    font-weight:bolder;
-    display:flex;
+    color: #fff;
+    font-size: 28px;
+    font-weight: 600;
+    display: flex;
 }
 
 
@@ -269,6 +362,7 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 .header__menu {
@@ -303,7 +397,7 @@ ul {
 
 .main__modal {
     position: fixed;
-    top: -25%;
+    top: -50%;
     transition: all 0.5s ease;
 }
 
@@ -339,6 +433,118 @@ ul {
     color: var(--primary-color);
 }
 
+.head-media {
+    font-size: 23px;
+}
+
+
+
+/* ABOUT */
+
+#about {
+   
+}
+
+.about {
+    padding: 160px 0;
+    
+}
+
+.about__page {
+
+}
+.about__title {
+    font-weight: 600;
+    font-size: 36px;
+    color: #212529;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    padding-bottom: 10px;
+    line-height: 1.5!important;
+}
+.about__title::before {
+    content: '';
+    width: 100px;
+    height: 3px;
+    background-color: var(--primary-color);
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 46%;
+}
+
+.about__desc {
+    padding: 100px 40px;
+}
+.row {
+}
+.col-sm-8 {
+}
+.col-xs-12 {
+}
+.about__me {
+    border: 1px solid red;
+}
+.about__me-to {
+}
+.me-to {
+}
+.me-to__title {
+    margin-bottom: 16px;
+    font-size: 30px;
+    color: #252b33;
+}
+
+.me-to__x{
+    color: var(--primary-color);
+}
+.me-to__text {
+}
+.col-sm-4 {
+}
+.about__location {
+    border: 1px solid turquoise;
+}
+.location {
+}
+.location__list {
+}
+.location__item {
+    padding: 12px 0;
+    border-bottom: 1px solid #eaeaea;
+}
+.location__span {
+    color: #4c4d4d;
+    font-weight: 600;
+    font-size: 16px;
+    margin-left: 8px;
+}
+.location__name {
+    font-weight: 400;
+}
+.link-mail {
+    color: var(--primary-color);
+}
+
+.about__title {
+   
+}
+
+.location__item {
+    /* display: flex; */
+}
+
+.location__name {
+    display: inline;
+}
+
+.link-email {
+    display: inline;
+}
+
+
+
 
 @media screen and (max-width: 990px) {
     .container-fluid {
@@ -362,6 +568,18 @@ ul {
     .header {
         display: block;
     }
+
+    .main__modal {
+        position: fixed;
+        top: -26%;
+        transition: all 0.5s ease;
+    }
+
+    /* .about {
+        width: 100%;
+        float:none;
+    } */
+
 }
 
 @media screen and (max-width: 778px) {
