--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap');
 
-
+html {
+    scroll-behavior: smooth;
+}
 
 :root {
     --text-color: #fff;
@@ -8,7 +10,7 @@
 }
 
 
-*, 
+*,
 *::after,
 *::before {
     box-sizing: border-box;
@@ -23,16 +25,17 @@ body {
     flex-direction: column;
     background-color: #fff;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 .container-fluid {
     width: 100%;
 }
-
+ 
 .container {
     width: 95%;
     padding: 0 10px;
-}
+} 
 
 a {
     text-decoration: none;
@@ -59,6 +62,8 @@ ul {
 }
 
 
+
+
 /* sitebar */
 
 
@@ -76,6 +81,7 @@ ul {
     align-items: center;
     justify-content: center;
 }
+
 .sitebar__img {
     width: 160px;
     height: 160px;
@@ -84,6 +90,7 @@ ul {
     border-radius: 50%;
     margin-bottom: 30px;
 }
+
 .sitebar__title {
     font-size: 25px;
     color: var(--text-color);
@@ -93,16 +100,17 @@ ul {
 }
 
 .nav-list {
-     display: flex;
-     flex-direction: column;
-     text-align: center;
-     margin-bottom: 155px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-bottom: 155px;
 }
 
 .nav-item {
     padding: 10px 0;
     text-transform: capitalize;
 }
+
 .nav-link {
     color: #fafafae6;
     font-size: 16px;
@@ -124,21 +132,24 @@ ul {
 
 .media__item {
     padding: 0 5px;
-    
+
 }
 
 .bxl-facebook {
     font-size: 25px;
     color: #fafafae6;
 }
+
 .bxl-instagram {
     font-size: 25px;
     color: #fafafae6;
 }
+
 .bxl-telegram {
     font-size: 25px;
     color: #fafafae6;
 }
+
 .bxl-linkedin {
     font-size: 25px;
     color: #fafafae6;
@@ -147,12 +158,15 @@ ul {
 .bxl-facebook:hover {
     color: blue;
 }
+
 .bxl-instagram:hover {
     color: #f33ea8;
 }
+
 .bxl-telegram:hover {
     color: #3ea2f3;
 }
+
 .bxl-linkedin:hover {
     color: rgb(0, 102, 255);
 }
@@ -161,8 +175,8 @@ ul {
 /* MAIN */
 
 .main {
-   width: 82%;
-   float: right;
+    width: 82%;
+    float: right;
 }
 
 .main__desc {
@@ -171,7 +185,7 @@ ul {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 .main__span {
@@ -194,14 +208,14 @@ ul {
     position: relative;
     width: 550px;
     margin-bottom: 16px;
-  }
-  
-  .ttl__span {
+}
+
+.ttl__span {
     font-size: 40px;
     margin-left: 90px;
-  }
-  
-  .message {
+}
+
+.message {
     background-color: transparent;
     color: #fcf6f6;
     display: block;
@@ -212,76 +226,92 @@ ul {
     top: 0.2rem;
     left: 240px;
     animation: openclose 5s ease-in-out infinite;
-  }
-  
-  .word1, .word2, .word3 {
+}
+
+.word1,
+.word2,
+.word3 {
     font-family: 'Poppins', sans-serif;
-  }
-  
-  @keyframes openclose {
+}
+
+@keyframes openclose {
     0% {
-      top: 0.2rem;
-      width: 0;
+        top: 0.2rem;
+        width: 0;
     }
+
     5% {
-      width: 0;
+        width: 0;
     }
+
     15% {
-      width: 300px;
+        width: 300px;
     }
+
     30% {
-      top: 0.2rem;
-      width: 300px;
+        top: 0.2rem;
+        width: 300px;
     }
+
     33% {
-      top: 0.2rem;
-      width: 0;
+        top: 0.2rem;
+        width: 0;
     }
+
     35% {
-      top: 0.2rem;
-      width: 0;
+        top: 0.2rem;
+        width: 0;
     }
+
     38% {
-      top: -4.5rem;
-      
+        top: -4.5rem;
+
     }
+
     48% {
-      top: -4.5rem;
-      width: 320px;
+        top: -4.5rem;
+        width: 320px;
     }
+
     62% {
-      top: -4.5rem;
-      width: 320px;
+        top: -4.5rem;
+        width: 320px;
     }
+
     66% {
-      top: -4.5rem;
-      width: 0;
-      text-indent: 0;
+        top: -4.5rem;
+        width: 0;
+        text-indent: 0;
     }
+
     71% {
-      top: -9rem;
-      width: 0;
-      text-indent: 5px;
+        top: -9rem;
+        width: 0;
+        text-indent: 5px;
     }
+
     86% {
-      top: -9rem;
-      width: 285px;
+        top: -9rem;
+        width: 285px;
     }
+
     95% {
-      top: -9rem;
-      width: 285px;
+        top: -9rem;
+        width: 285px;
     }
+
     98% {
-      top: -9rem;
-      width: 0;
-      text-indent: 5px;
+        top: -9rem;
+        width: 0;
+        text-indent: 5px;
     }
+
     100% {
-      top: 0;
-      width: 0;
-      text-indent: 0;
+        top: 0;
+        width: 0;
+        text-indent: 0;
     }
-  }
+}
 
 .main__text {
     color: #dee3e4;
@@ -290,6 +320,7 @@ ul {
     margin-bottom: 24px;
     letter-spacing: 2px;
 }
+
 .main__btn {
     color: var(--primary-color);
     font-size: 18px;
@@ -335,6 +366,7 @@ ul {
     0% {
         transform: translateY(-30px)
     }
+
     100% {
         transform: translateY(0);
     }
@@ -350,12 +382,12 @@ ul {
 
 
 .header {
-   width: 100%;
-   background-color: #000;
-   padding: 20px 15px;
-   position: fixed;
-   display: none;
-   z-index: 200;
+    width: 100%;
+    background-color: #000;
+    padding: 20px 15px;
+    position: fixed;
+    display: none;
+    z-index: 200;
 }
 
 .header__page {
@@ -378,6 +410,7 @@ ul {
     font-size: 30px;
     color: var(--text-color);
 }
+
 .bx-x {
     font-size: 30px;
     color: var(--text-color);
@@ -401,7 +434,7 @@ ul {
     transition: all 0.5s ease;
 }
 
-.modal__page{
+.modal__page {
     background-color: rgba(0, 0, 0, 0.678);
     padding-top: 80px;
     position: fixed;
@@ -415,6 +448,7 @@ ul {
     text-align: start;
     padding-left: 15px;
 }
+
 .modal__item {
     padding: 10px 0;
     text-transform: capitalize;
@@ -441,18 +475,29 @@ ul {
 
 /* ABOUT */
 
-#about {
-   
-}
-
-.about {
-    padding: 160px 0;
-    
+.about__big-title {
+    font-size: 100px;
+    color: #dee3e4;
+    opacity: 0.4;
+    font-weight: 600;
+    line-height: 1.3;
+    font-size: calc(1.95rem + 8.4vw);
+    text-transform: uppercase;
+    position: absolute;
+    top: -12%;
+    left: 15%;
 }
 
 .about__page {
+    position: relative;
+}
+
+.about {
+    padding: 100px 0 72px 0;
+    background-color: #f8f9fa;
 
 }
+
 .about__title {
     font-weight: 600;
     font-size: 36px;
@@ -461,8 +506,9 @@ ul {
     justify-content: center;
     position: relative;
     padding-bottom: 10px;
-    line-height: 1.5!important;
+    line-height: 1.5;
 }
+
 .about__title::before {
     content: '';
     width: 100px;
@@ -475,64 +521,49 @@ ul {
 }
 
 .about__desc {
+    display: flex;
+    flex-direction: row;
     padding: 100px 40px;
 }
-.row {
-}
-.col-sm-8 {
-}
-.col-xs-12 {
-}
-.about__me {
-    border: 1px solid red;
-}
-.about__me-to {
-}
-.me-to {
-}
+
 .me-to__title {
     margin-bottom: 16px;
     font-size: 30px;
     color: #252b33;
 }
 
-.me-to__x{
+.me-to__x {
     color: var(--primary-color);
 }
-.me-to__text {
-}
-.col-sm-4 {
-}
-.about__location {
-    border: 1px solid turquoise;
-}
-.location {
-}
+
 .location__list {
+    margin-bottom: 35px;
+    width: 100%;
 }
+
 .location__item {
     padding: 12px 0;
+    width: 100%;
+
+}
+
+.location__item:not(:last-child) {
     border-bottom: 1px solid #eaeaea;
 }
+
 .location__span {
     color: #4c4d4d;
     font-weight: 600;
     font-size: 16px;
     margin-left: 8px;
 }
+
 .location__name {
     font-weight: 400;
 }
+
 .link-mail {
     color: var(--primary-color);
-}
-
-.about__title {
-   
-}
-
-.location__item {
-    /* display: flex; */
 }
 
 .location__name {
@@ -543,6 +574,315 @@ ul {
     display: inline;
 }
 
+.location__btn {
+    box-shadow: 0px 5px 15px rgb(0 0 0 / 15%);
+    background-color: var(--primary-color);
+    padding: 0.8rem 2.6rem;
+    font-weight: 500;
+    border: 2px solid var(--primary-color);
+    border-radius: 50rem;
+    color: var(--text-color);
+    text-transform: capitalize;
+}
+
+.location__btn:hover {
+    background-color: #1baa80;
+    border-color: #1baa80;
+}
+
+/* contact */
+
+.contact {
+    padding: 100px 48px 72px 48px;
+    background-color: #f8f9fa;
+
+}
+
+.contact__page {
+    position: relative
+}
+
+.contact__title {
+    margin-bottom: 72px;
+}
+
+.contact__desc {
+    margin-bottom: 24px;
+}
+
+.adress {
+    text-align: left;
+}
+
+.adress__title {
+    color: #252b33;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 1.2;
+    margin-bottom: 16px;
+}
+
+.adress__text {
+    font-size: 16px;
+    color: #4c4d4d;
+    line-height: 1.8;
+    margin-bottom: 24px;
+}
+
+.adress__tel {
+    display: inline-block;
+    color: #4c4d4d;
+    margin-bottom: 4px;
+    line-height: 1.8;
+    display: flex;
+    align-items: center;
+}
+
+.adress__tel:hover {
+    color: var(--primary-color);
+}
+
+.bxs-phone {
+    font-size: 28px;
+    color: var(--primary-color);
+    margin-right: 7px;
+}
+
+.bx-mail-send {
+    font-size: 28px;
+    color: var(--primary-color);
+    margin-right: 7px;
+
+}
+
+.follow {
+    text-align: left;
+}
+
+.follow__title {
+    color: #252b33;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 1.2;
+    margin-bottom: 16px;
+    text-transform: uppercase;
+}
+
+.follow__list {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.follow__item {
+    padding: 5px;
+}
+
+.follow-bx {
+    color: #4c4d4d;
+    font-size: 24px;
+}
+
+.forms {
+    width: 100%;
+}
+
+.form__title {
+    color: #252b33;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 1.2;
+    margin-bottom: 16px;
+}
+
+.form__input-box {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.form__input {
+    width: 48%;
+    padding: 13px 15px;
+    background-color: #fff;
+    font-size: 16px;
+    color: #656565;
+    font-weight: 400;
+    line-height: 1.5;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+}
+
+::placeholder {
+    font-size: 16px;
+    color: #656565;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+.form__input:focus {
+    box-shadow: 0 0 5px rgb(128 189 255 / 50%);
+    border-color: #86b7fe;
+    outline: 0;
+}
+
+.form__area:focus {
+    box-shadow: 0 0 5px rgb(128 189 255 / 50%);
+    border-color: #86b7fe;
+    outline: 0;
+}
+
+.form__area {
+    padding: 0.81rem 0.96rem;
+    width: 100%;
+    height: inherit;
+    background-color: #fff;
+    font-size: 16px;
+    color: #656565;
+    font-weight: 400;
+    line-height: 1.5;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    margin-bottom: 24px;
+}
+
+.form__btn {
+    box-shadow: 0px 5px 15px rgb(0 0 0 / 15%);
+    background-color: var(--primary-color);
+    padding: 0.8rem 2.6rem;
+    font-weight: 500;
+    font-size: 16px;
+    border: 2px solid var(--primary-color);
+    border-radius: 50rem;
+    color: var(--text-color);
+    text-transform: capitalize;
+}
+
+.form__btn:hover {
+    background-color: #1baa80;
+    border-color: #1baa80;
+}
+
+.contact__row {
+    display: flex;
+    flex-direction: row;
+}
+
+/* portfolio */
+
+
+
+
+.portfolio {
+    padding: 100px 0 72px 30px;
+}
+
+.portfolio__page {
+    position: relative;
+}
+
+.portfolio__list {
+    text-align: center;
+    
+}
+.portfolio__title {
+    margin-bottom: 72px;
+}
+
+.portfolio__item {
+    padding: 15px 5px;
+    position: relative;
+}
+
+.portfolio__hover {
+    width: 315px;
+    height: 210px;
+}
+
+.portfolio__link {
+    width: 315px;
+    height: 210px;
+    
+}
+.portfolio__img {
+    width: 315px;
+    height: 210px;
+    background-image: url(../imgs/project-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: -1;
+}
+
+.portfolio__hover {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    width: 315px;
+    height: 210px;
+}
+
+.portfolio__colors{
+    width: 315px;
+    height: 0;
+    background-color: rgba(0, 0, 0, 0.685);
+    position: absolute;
+    top: 5%;
+    left: 5px;
+    transition: all 0.4s ease;
+}
+
+.portfolio__hover:hover .portfolio__colors{
+    height: 90%;
+}
+
+.portfolio__links-box {
+    position: absolute;
+    top: 0;
+    left: 35%;
+    transition: all 0.4s ease;
+    opacity: 0;
+}
+
+.mini-link {
+    color: #fff;
+    font-size: 30px;
+    transition: all 0.4s ease;
+    animation: links 1s ease-in-out 1s alternate infinite;
+}
+
+@keyframes links {
+    0% {
+        transform: translateY(0px);
+    }
+
+    100% {
+        transform: translateY(-10px);
+    }
+}
+
+.bxl-netlify {
+    animation: linkss 1s ease-in-out 1s alternate infinite;
+}
+
+@keyframes linkss {
+    0% {
+        transform: translateY(-10px);
+    }
+
+    100% {
+        transform: translateY(0px);
+    }
+}
+
+.mini-link:hover {
+    color: var(--primary-color);
+    
+}
+
+.portfolio__hover:hover .portfolio__links-box{
+    top: 45%;
+    opacity: 1;
+}
 
 
 
@@ -562,8 +902,8 @@ ul {
 
     .main {
         width: 100%;
-        float:none;
-     }
+        float: none;
+    }
 
     .header {
         display: block;
@@ -573,12 +913,28 @@ ul {
         position: fixed;
         top: -26%;
         transition: all 0.5s ease;
+        opacity: 0;
     }
 
-    /* .about {
-        width: 100%;
-        float:none;
-    } */
+    .about__me {
+        margin-bottom: 30px;
+    }
+
+    .adress {
+        text-align: center;
+    }
+
+    .portfolio__list {
+        /* text-align: center; */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .portfolio {
+        padding: 30px 0;
+    }
+
 
 }
 
@@ -586,10 +942,114 @@ ul {
     .main {
         width: 100%;
         text-align: center;
-     }
+    }
+
+    .contact {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .about__desc {
+        display: flex;
+        flex-direction: column;
+        padding: 50px 0;
+        text-align: center;
+    }
+
+    .location {
+        text-align: left;
+    }
+
+    .form__input-box {
+        flex-direction: column;
+    }
+
+    .contact {
+        padding: 50px 0;
+    }
+
+    .contact__row {
+        flex-direction: column-reverse;
+    }
+
+    .form__input {
+        width: 100%;
+    }
+
+    .form__input:nth-child(1) {
+        margin-bottom: 30px;
+    }
+
+    .form__page {
+        margin-bottom: 30px;
+    }
+
 
 }
 
 .show {
     top: 0;
+    opacity: 1;
 }
+
+.go-top{
+    position: fixed;
+    cursor: pointer;
+    right: 20px;
+    font-size: 25px;
+    bottom: 15px;
+    background: rgba(110, 110, 110, 0.274);
+    z-index: 4;
+    width: 40px;
+    text-align: center;
+    height: 42px;
+    line-height: 42px;
+    transition: all 0.6s ease;
+    overflow: hidden;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .go-link{
+    text-decoration: none;
+    color: #fff;
+    transition: all 0.6s ease;
+  }
+
+  .go-top::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: var(--primary-color);
+    opacity: 0;
+    transition: all 0.6s ease;
+  }
+  .go-top:hover .go-top::before{
+    background-color: var(--primary-color);
+    opacity: 1;
+  }
+  .go-top:hover{
+    background-color: var(--primary-color);
+  }
+  .go-top:hover .bx-chevrons-up:nth-child(2){
+    opacity: 1;
+    transform: translateY(-40px);
+  }
+  .bx-chevrons-up:nth-child(2){
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+    opacity: 0;
+    margin: 0 auto;
+    transition: all 0.6s ease;
+    overflow: hidden;
+  }
